--- a/TuneHub/src/app/Components/Users/profile-mini-avatar/profile-mini-avatar.component.css
+++ b/TuneHub/src/app/Components/Users/profile-mini-avatar/profile-mini-avatar.component.css
@@ -4,6 +4,7 @@
   height: 50px;
   border-radius: 50%; /* עיגול */
   overflow: visible; /* חשוב - לא לחתוך את האלמנטים שמחוץ לגבול */
+  cursor: pointer;
 }
 
 .profile-picture {
