--- a/TuneHub/src/app/Components/SheetMusic/sheets-music/sheets-music.component.html
+++ b/TuneHub/src/app/Components/SheetMusic/sheets-music/sheets-music.component.html
@@ -7,7 +7,7 @@
       <div class="overlay-content">
         <div class="title-section">
           <h1 class="musicians" style="font-size: 60px;">Sheet Music Library</h1>
-          <p style="font-size: 25px;color: #ffffff;">Connect with talented professionals for your next project</p>
+          <p style="font-size: 25px;color: #ffffff;">Discover, learn, and share musical scores from around the world</p>
         </div>
         <button class="button join-network-btn" (click)="openUploadModal()">
           <!-- <span class="icon">🧑</span> -->
