--- a/TuneHub/src/app/Components/Users/login-window/login-window.component.html
+++ b/TuneHub/src/app/Components/Users/login-window/login-window.component.html
@@ -59,8 +59,9 @@
           
           <div class="input-group">
             <label for="login-name">Name</label>
-            <input id="login-name" type="name" formControlName="name" placeholder="shira">
+            <input id="login-name" type="text" formControlName="name" placeholder="Enter your user name">
           </div>
+        
           
           <div class="input-group">
             <label for="login-password">Password</label>
