--- a/TuneHub/src/app/comment/comment.component.html
+++ b/TuneHub/src/app/comment/comment.component.html
@@ -1,9 +1,12 @@
-<!-- comments.component.html -->
 
-<div @for="let c of comments">
-  <p>{{ c.content }}</p>
-  <small>{{ c.dateUploaded }}</small>
-  <hr>
-</div>
+@for (c of comments; track c.id) {
+  <div>
+    <p>{{ c.content }}</p>
+    <small>{{ c.dateUploaded }}</small>
+    <hr>
+  </div>
+}
 
-<button @if="hasMore()" (click)="loadComments()">Load More</button>
+@if (page < totalPages) {
+  <button (click)="loadComments()">Load More</button>
+}
