--- a/TuneHub/src/app/Components/Post/posts/posts.component.html
+++ b/TuneHub/src/app/Components/Post/posts/posts.component.html
@@ -102,6 +102,13 @@
                 <span>❤️ {{post.hearts}}</span>
                 <span>👍 {{post.likes}}</span>
             </div>
+<!-- 
+            <app-like-button
+        [targetType]="'POST'" 
+        [targetId]="post.id"
+        [initialLikeCount]="post.likeCount"
+        [isLikedByUser]="post.isLikedByCurrentUser"> 
+    </app-like-button> -->
         </footer>
 
         <hr>
