--- a/TuneHub/src/app/Components/SheetMusic/sheets-music/sheets-music.component.css
+++ b/TuneHub/src/app/Components/SheetMusic/sheets-music/sheets-music.component.css
@@ -469,3 +469,75 @@ body{
   color: gray;
 }
 
+
+.search-bar {
+    display: grid;
+    grid-template-columns: 2fr repeat(2, 1fr) 0.5fr; 
+    gap: 10px;
+    background-color: #1e1e2d; /* רקע כהה ספציפי (לשמירה על ההפרדה מה-body) */
+    padding: 15px;
+    border-radius: 8px;
+    align-items: center;
+}
+
+.search-input-group {
+    display: flex;
+    align-items: center;
+   background-color: #2b3a52;
+    border-radius: 4px;
+    padding: 5px 10px;
+}
+
+.search-input-group input {
+    background: none;
+    border: none;
+    color: #f0f0f0;
+    padding: 5px;
+    flex-grow: 1;
+}
+
+.search-icon {
+    margin-right: 10px;
+}
+
+.dropdown, .filters-btn {
+    padding: 10px;
+    border-radius: 4px;
+    border: none;
+    background-color: #2b3a52;
+    color: #f0f0f0;
+    cursor: pointer;
+}
+
+/* כפתור הפילטרים */
+.filters-btn {
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* שורת המסננים הנוספים (השורה הנסתרת/מוצגת) */
+.additional-filters {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); 
+    gap: 20px;
+    padding: 20px 15px;
+    margin-top: 10px;
+    background-color: #1e1e2d; /* רקע כהה ספציפי (לשמירה על ההפרדה מה-body) */
+    border-radius: 8px;
+}
+
+.filter-group label {
+    display: block;
+    margin-bottom: 5px;
+    color: #aaaaaa;
+}
+
+.filter-group .dropdown {
+    
+    width: 100%;
+}
+
+
+
