--- a/TuneHub/src/app/Components/Teachers/teacher-list/teacher-list.component.html
+++ b/TuneHub/src/app/Components/Teachers/teacher-list/teacher-list.component.html
@@ -5,4 +5,52 @@
         <li>Teacher 2</li>
         <li>Teacher 3</li>
     </ul>
+
+     <section class="search-bar">
+        <div class="search-input-group">
+            <span class="search-icon">🔍</span>
+            <input type="text" placeholder="Search musicians by name, instrument, or skills..." />
+        </div>
+        <select class="dropdown">
+            <option>All</option>
+        </select>
+        <select class="dropdown">
+            <option>All</option>
+        </select>
+
+        <button class="filters-btn" (click)="toggleFilters()">
+            Filters <span class="arrow-icon">{{ showFilters ? '∧' : '∨' }}</span>
+        </button>
+    </section>
+    @if (showFilters) {
+    <section class="additional-filters">
+        <div class="filter-group">
+            <label>Experience</label>
+            <select class="dropdown">
+                <option>Any Experience</option>
+            </select>
+        </div>
+
+        <div class="filter-group">
+            <label>Rating</label>
+            <select class="dropdown">
+                <option>Any Rating</option>
+            </select>
+        </div>
+
+        <div class="filter-group">
+            <label>Availability</label>
+            <select class="dropdown">
+                <option>Any Availability</option>
+            </select>
+        </div>
+
+        <div class="filter-group">
+            <label>Price Range</label>
+            <select class="dropdown">
+                <option>Any Price</option>
+            </select>
+        </div>
+    </section>
+    }
 </div>
