--- a/TuneHub/src/app/app.component.html
+++ b/TuneHub/src/app/app.component.html
@@ -11,12 +11,17 @@
   
   
     <app-sidebar></app-sidebar>
+    
   </mat-sidenav>
 
   <mat-sidenav-content>
     <main class="pt-16 min-h-screen bg-gray-50">
+                <app-chat-bot></app-chat-bot>
+
       <router-outlet></router-outlet>
+
     </main>
+
     <app-footer></app-footer>
     
   </mat-sidenav-content>
